# shopify-link-checker

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.prod  README.md  docker-compose.prod.yml  docker-compose.yml  fly.toml  nginx.conf  package.json  pyproject.toml  railway.json  render.yaml  requirements.txt  server.js
public/: index.html
src/: __init__.py  cli.py  job_manager.py  link_checker.py  main.py  models.py  shopify_client.py  utils.py
templates/: index.html
tests/: __init__.py  test_link_checker.py  test_models.py  test_utils.py
